[package]
name = "quizzler-neutron"
version = "0.1.0"
authors = ["JoE11-y <Josephedoh77@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
neutron-sdk = { package = "neutron-sdk", git = "https://github.com/neutron-org/neutron-sdk", branch = "feat/disable-feerefunder-fee" }
neutron-std = { git = "https://github.com/neutron-org/neutron-std", branch = "feat/disable-feerefunder-fee" }
prost = "0.12.4"
prost-types = "0.12.4"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
cosmwasm-std = { version = "2.1.0", features = [
  "stargate",
  "staking",
  "cosmwasm_1_1",
  "cosmwasm_1_2",
  "cosmwasm_1_3",
  "cosmwasm_1_4",
  "cosmwasm_2_0",
] }
cw2 = "2.0.0"
cw-storage-plus = "2.0.0"
schemars = "0.8.15"
serde = { version = "1.0.189", default-features = false }
cosmwasm-schema = { version = "2.1.0", default-features = false }
serde-json-wasm = "1.0.0"
base64 = "0.21.7"
thiserror = "1.0.49"
serde_json = "1.0"
cw-utils = "2.0.0"
bech32 = "0.9.1"
sha2 = "0.10.9"

[dev-dependencies]
cw-multi-test = "2.2.0"
